--- a/index.html
+++ b/index.html
@@ -2,170 +2,72 @@
 <html lang="hr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lincoln QuickMIG 300 – Simulator</title>
-
+<title>QUICKMIG 300 – Simulator</title>
 <style>
 body {
-    margin:0;
-    background:#111;
+    background:#1e1e1e;
     font-family: Arial, sans-serif;
     color:#fff;
 }
-
 .panel {
-    max-width:420px;
-    margin:15px auto;
-    background:#2a2a2a;
-    border-radius:16px;
-    padding:16px;
-    box-shadow:0 0 30px #000;
+    width:420px;
+    margin:40px auto;
+    background:#2b2b2b;
+    padding:20px;
+    border-radius:10px;
+    box-shadow:0 0 20px #000;
 }
-
-.brand {
+h2 {
     text-align:center;
-    font-size:20px;
-    font-weight:bold;
-    color:#e30000;
+    color:#ff3333;
 }
-
 .display {
-    background:#000;
-    border-radius:8px;
-    padding:12px;
     display:flex;
     justify-content:space-between;
-    margin:12px 0;
-    box-shadow: inset 0 0 12px #00ffcc;
+    margin-bottom:20px;
 }
-
-.display div {
-    width:48%;
+.screen {
+    background:#000;
+    color:red;
+    font-size:32px;
+    padding:10px;
+    width:45%;
     text-align:center;
+    border-radius:5px;
 }
-
-.value {
-    font-size:28px;
-    color:#00ffcc;
-}
-
 .label {
-    font-size:11px;
+    text-align:center;
+    font-size:12px;
     color:#aaa;
 }
-
-label {
-    font-size:13px;
+.control {
+    margin:15px 0;
 }
-
-input {
+input[type=range] {
     width:100%;
-    padding:10px;
-    font-size:16px;
-    border-radius:6px;
-    border:none;
-    margin-top:6px;
 }
-
-.knobs {
+.switches {
     display:flex;
     justify-content:space-between;
-    margin:14px 0;
+    margin-top:15px;
 }
-
-.knob {
-    width:30%;
-    background: radial-gradient(#444, #111);
-    border-radius:50%;
-    padding:18px 0;
-    text-align:center;
-    box-shadow: inset 0 0 15px #000;
-}
-
-.knob strong {
-    font-size:18px;
-}
-
-.knob span {
-    font-size:11px;
-    color:#ccc;
-}
-
-/* ROTARY TRIM */
-.rotary-wrap {
-    text-align:center;
-    margin:16px 0;
-}
-
-.rotary {
-    width:120px;
-    height:120px;
-    border-radius:50%;
-    background: radial-gradient(#555, #111);
-    margin:auto;
-    position:relative;
-    touch-action:none;
-    box-shadow: inset 0 0 18px #000;
-}
-
-.rotary-indicator {
-    width:4px;
-    height:42px;
-    background:#00ffcc;
-    position:absolute;
-    top:10px;
-    left:50%;
-    transform:translateX(-50%);
-    border-radius:2px;
-    box-shadow:0 0 8px #00ffcc;
-}
-
-.trim-label {
-    margin-top:8px;
-    font-size:14px;
-}
-
-/* WARNING LED */
-.warning-wrap {
-    text-align:center;
-    margin:10px 0;
-}
-
-.led {
-    width:16px;
-    height:16px;
-    border-radius:50%;
-    background:#400;
-    margin:auto;
-    box-shadow:0 0 5px #000;
-}
-
-.led.on {
-    background:red;
-    box-shadow:0 0 14px red;
-}
-
-/* BUTTONS */
-.buttons {
-    display:flex;
-    gap:10px;
-    margin-top:10px;
-}
-
 button {
-    flex:1;
-    padding:12px;
-    font-size:16px;
+    background:#444;
+    color:white;
     border:none;
-    border-radius:8px;
+    padding:10px;
+    border-radius:5px;
     cursor:pointer;
 }
-
-.start { background:#e30000; color:#fff; }
-.stop { background:#333; color:#ccc; }
-
-@media (max-width:480px) {
-    .value { font-size:24px; }
+button.active {
+    background:#ff3333;
+}
+.info {
+    margin-top:20px;
+    font-size:14px;
+    background:#111;
+    padding:10px;
+    border-radius:5px;
 }
 </style>
 </head>
@@ -173,140 +75,64 @@ button {
 <body>
 
 <div class="panel">
-    <div class="brand">LINCOLN ELECTRIC<br>QuickMIG 300</div>
+<h2>LINCOLN QUICKMIG 300</h2>
 
-    <div class="display">
-        <div>
-            <div class="value" id="voltage">--.-</div>
-            <div class="label">VOLTS</div>
-        </div>
-        <div>
-            <div class="value" id="current">---</div>
-            <div class="label">AMPS</div>
-        </div>
+<div class="display">
+    <div>
+        <div class="screen" id="wire">4.5</div>
+        <div class="label">ŽICA (m/min)</div>
     </div>
-
-    <label>Debljina materijala (mm)</label>
-    <input type="number" id="thickness" step="0.1" placeholder="npr. 1.5">
-
-    <div class="knobs">
-        <div class="knob">
-            <strong id="wire">–</strong><br>
-            <span>ŽICA m/min</span>
-        </div>
-        <div class="knob">
-            <strong>0.8 mm</strong><br>
-            <span>SG2</span>
-        </div>
-        <div class="knob">
-            <strong>82/18</strong><br>
-            <span>Ar / CO₂</span>
-        </div>
-    </div>
-
-    <!-- ROTARY TRIM -->
-    <div class="rotary-wrap">
-        <div id="rotary" class="rotary">
-            <div class="rotary-indicator"></div>
-        </div>
-        <div class="trim-label">
-            TRIM: <span id="trimValue">0.0 V</span>
-        </div>
-    </div>
-
-    <!-- WARNING -->
-    <div class="warning-wrap">
-        ⚠️ WARNING
-        <div id="warning" class="led"></div>
-    </div>
-
-    <div class="buttons">
-        <button class="start" onclick="startArc()">START</button>
-        <button class="stop" onclick="stopArc()">STOP</button>
+    <div>
+        <div class="screen" id="volt">18.8</div>
+        <div class="label">NAPON (V)</div>
     </div>
 </div>
 
-<audio id="arcSound" loop>
-    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_65cbe8a8de.mp3">
-</audio>
+<div class="control">
+    Žica / Struja
+    <input type="range" min="2.5" max="6.0" step="0.1" value="4.5"
+           oninput="wire.value=this.value; autoCalc()">
+</div>
+
+<div class="control">
+    Napon
+    <input type="range" min="16" max="21" step="0.1" value="18.8"
+           oninput="volt.value=this.value">
+</div>
+
+<div class="control">
+    Induktivnost
+    <input type="range" min="1" max="10" step="1" value="5"
+           oninput="ind.innerText=this.value">
+</div>
+
+<div class="switches">
+    <button id="t2" class="active" onclick="mode('2T')">2T</button>
+    <button id="t4" onclick="mode('4T')">4T</button>
+</div>
+
+<div class="info">
+    <b>Materijal:</b> Ograda / Kapija / Stub<br>
+    <b>Žica:</b> 1.0 mm<br>
+    <b>Induktivnost:</b> <span id="ind">5</span><br>
+    <b>Način:</b> <span id="mode">2T</span>
+</div>
+</div>
 
 <script>
-let baseVoltage = 17.0;
-let angle = 0;
-let trim = 0;
-
-const voltageDisplay = document.getElementById("voltage");
-const currentDisplay = document.getElementById("current");
-const wireDisplay = document.getElementById("wire");
-const trimText = document.getElementById("trimValue");
-const warning = document.getElementById("warning");
-const arc = document.getElementById("arcSound");
-const knob = document.getElementById("rotary");
-
-function synergy(t) {
-    if (t <= 1.5) return {v:17.0,a:70,w:4.5};
-    if (t <= 2.0) return {v:18.0,a:85,w:5.2};
-    if (t <= 3.0) return {v:19.0,a:110,w:6.0};
-    if (t <= 4.0) return {v:20.5,a:140,w:7.0};
-    return {v:22.0,a:160,w:8.0};
+function autoCalc() {
+    let w = parseFloat(wire.value);
+    let v = (14 + w).toFixed(1);
+    volt.innerText = v;
+    document.querySelector("input[oninput*='volt']").value = v;
 }
 
-function startArc() {
-    let t = parseFloat(document.getElementById("thickness").value);
-    if (!t) return;
-
-    let s = synergy(t);
-    baseVoltage = s.v;
-    angle = 0;
-    updateTrim();
-
-    currentDisplay.innerText = s.a;
-    wireDisplay.innerText = s.w;
-
-    arc.volume = 0.4;
-    arc.play();
+function mode(m) {
+    document.getElementById("mode").innerText = m;
+    t2.classList.remove("active");
+    t4.classList.remove("active");
+    document.getElementById(m.toLowerCase()).classList.add("active");
 }
-
-function stopArc() {
-    arc.pause();
-    arc.currentTime = 0;
-    warning.classList.remove("on");
-}
-
-function updateTrim() {
-    let finalV = baseVoltage + trim;
-    voltageDisplay.innerText = finalV.toFixed(1);
-
-    if (finalV > baseVoltage + 1.2) {
-        warning.classList.add("on");
-    } else {
-        warning.classList.remove("on");
-    }
-}
-
-/* ROTARY CONTROL */
-function setAngle(a) {
-    angle = Math.max(-135, Math.min(135, a));
-    knob.style.transform = `rotate(${angle}deg)`;
-    trim = (angle / 135) * 2.0;
-    trimText.innerText = trim.toFixed(1) + " V";
-    updateTrim();
-}
-
-knob.addEventListener("mousedown", e => {
-    document.onmousemove = ev => setAngle(angle - ev.movementY);
-    document.onmouseup = () => document.onmousemove = null;
-});
-
-knob.addEventListener("touchstart", e => {
-    let startY = e.touches[0].clientY;
-    let startAngle = angle;
-    knob.ontouchmove = ev => {
-        let delta = startY - ev.touches[0].clientY;
-        setAngle(startAngle + delta);
-    };
-    knob.ontouchend = () => knob.ontouchmove = null;
-});
 </script>
 
 </body>
