--- a/index.html
+++ b/index.html
@@ -2,72 +2,59 @@
 <html lang="hr">
 <head>
 <meta charset="UTF-8">
-<title>QUICKMIG 300 – Simulator</title>
+<title>QUICKMIG 300 – PRO Simulator</title>
+
 <style>
-body {
-    background:#1e1e1e;
-    font-family: Arial, sans-serif;
-    color:#fff;
+body{background:#151515;font-family:Arial;color:#eee}
+.panel{
+    width:520px;margin:30px auto;background:#2b2b2b;
+    border-radius:14px;padding:20px;
+    box-shadow:0 0 30px #000
 }
-.panel {
-    width:420px;
-    margin:40px auto;
-    background:#2b2b2b;
-    padding:20px;
-    border-radius:10px;
-    box-shadow:0 0 20px #000;
+h2{text-align:center;color:#ff2b2b}
+
+/* LED */
+.displays{display:flex;justify-content:space-between;margin-bottom:20px}
+.led{
+    background:#000;color:#ff0000;
+    font-family:'Courier New',monospace;
+    font-size:34px;padding:12px 16px;
+    border-radius:6px;box-shadow:inset 0 0 18px #500
 }
-h2 {
-    text-align:center;
-    color:#ff3333;
+.label{text-align:center;font-size:12px;color:#aaa}
+
+/* KNOBS */
+.knobs{display:flex;justify-content:space-around;margin-top:15px}
+.knob{
+    width:90px;height:90px;border-radius:50%;
+    background:radial-gradient(#444,#111);
+    position:relative
 }
-.display {
-    display:flex;
-    justify-content:space-between;
-    margin-bottom:20px;
+.knob input{
+    position:absolute;width:100%;height:100%;
+    opacity:0;cursor:pointer
 }
-.screen {
-    background:#000;
-    color:red;
-    font-size:32px;
-    padding:10px;
-    width:45%;
-    text-align:center;
-    border-radius:5px;
+.pointer{
+    width:4px;height:40px;background:red;
+    position:absolute;top:8px;left:43px;
+    transform-origin:bottom center
 }
-.label {
-    text-align:center;
-    font-size:12px;
-    color:#aaa;
+.knobBox{text-align:center}
+
+/* BUTTONS */
+.buttons{display:flex;justify-content:space-around;margin-top:25px}
+.btn{
+    background:#333;color:#eee;
+    padding:10px 14px;border-radius:6px;
+    border:none;cursor:pointer
 }
-.control {
-    margin:15px 0;
+.btn.active{
+    background:#ff2b2b;
+    box-shadow:0 0 12px red
 }
-input[type=range] {
-    width:100%;
-}
-.switches {
-    display:flex;
-    justify-content:space-between;
-    margin-top:15px;
-}
-button {
-    background:#444;
-    color:white;
-    border:none;
-    padding:10px;
-    border-radius:5px;
-    cursor:pointer;
-}
-button.active {
-    background:#ff3333;
-}
-.info {
-    margin-top:20px;
-    font-size:14px;
-    background:#111;
-    padding:10px;
-    border-radius:5px;
+.info{
+    margin-top:20px;background:#111;
+    padding:10px;border-radius:6px;font-size:14px
 }
 </style>
 </head>
@@ -77,61 +64,100 @@ button.active {
 <div class="panel">
 <h2>LINCOLN QUICKMIG 300</h2>
 
-<div class="display">
-    <div>
-        <div class="screen" id="wire">4.5</div>
-        <div class="label">ŽICA (m/min)</div>
-    </div>
-    <div>
-        <div class="screen" id="volt">18.8</div>
-        <div class="label">NAPON (V)</div>
-    </div>
+<div class="displays">
+  <div>
+    <div class="led" id="wire">4.5</div>
+    <div class="label">ŽICA m/min</div>
+  </div>
+  <div>
+    <div class="led" id="volt">18.8</div>
+    <div class="label">NAPON V</div>
+  </div>
 </div>
 
-<div class="control">
-    Žica / Struja
-    <input type="range" min="2.5" max="6.0" step="0.1" value="4.5"
-           oninput="wire.value=this.value; autoCalc()">
+<div class="knobs">
+
+<div class="knobBox">
+<div class="knob">
+<div class="pointer" id="p1"></div>
+<input type="range" min="25" max="60" value="45"
+oninput="setWire(this.value)">
+</div>
+<div class="label">ŽICA / STRUJA</div>
 </div>
 
-<div class="control">
-    Napon
-    <input type="range" min="16" max="21" step="0.1" value="18.8"
-           oninput="volt.value=this.value">
+<div class="knobBox">
+<div class="knob">
+<div class="pointer" id="p2"></div>
+<input type="range" min="160" max="210" value="188"
+oninput="setVolt(this.value)">
+</div>
+<div class="label">NAPON</div>
 </div>
 
-<div class="control">
-    Induktivnost
-    <input type="range" min="1" max="10" step="1" value="5"
-           oninput="ind.innerText=this.value">
+<div class="knobBox">
+<div class="knob">
+<div class="pointer" id="p3"></div>
+<input type="range" min="1" max="10" value="5"
+oninput="ind.innerText=this.value;rotate(p3,this.value*30)">
+</div>
+<div class="label">INDUKTIVNOST</div>
 </div>
 
-<div class="switches">
-    <button id="t2" class="active" onclick="mode('2T')">2T</button>
-    <button id="t4" onclick="mode('4T')">4T</button>
+</div>
+
+<div class="buttons">
+<button class="btn active" id="b2" onclick="mode('2T')">2T</button>
+<button class="btn" id="b4" onclick="mode('4T')">4T</button>
+<button class="btn active" id="syn" onclick="synergic()">SYNERGIC</button>
+<button class="btn" onclick="alert('Gas test')">GAS</button>
+<button class="btn" onclick="alert('Wire inch')">WIRE</button>
 </div>
 
 <div class="info">
-    <b>Materijal:</b> Ograda / Kapija / Stub<br>
-    <b>Žica:</b> 1.0 mm<br>
-    <b>Induktivnost:</b> <span id="ind">5</span><br>
-    <b>Način:</b> <span id="mode">2T</span>
+Materijal: Ograda / Kapija / Stub<br>
+Žica: 1.0 mm<br>
+Induktivnost: <span id="ind">5</span><br>
+Način: <span id="m">2T</span><br>
+Synergic: <span id="s">ON</span>
 </div>
+
 </div>
 
 <script>
-function autoCalc() {
-    let w = parseFloat(wire.value);
-    let v = (14 + w).toFixed(1);
-    volt.innerText = v;
-    document.querySelector("input[oninput*='volt']").value = v;
+let synOn=true;
+
+function rotate(p,v){p.style.transform="rotate("+v+"deg)"}
+
+function setWire(v){
+    let w=(v/10).toFixed(1);
+    wire.innerText=w;
+    rotate(p1,v*3);
+    if(synOn){
+        let nv=(14+parseFloat(w)).toFixed(1);
+        volt.innerText=nv;
+        rotate(p2,nv*10);
+    }
 }
 
-function mode(m) {
-    document.getElementById("mode").innerText = m;
-    t2.classList.remove("active");
-    t4.classList.remove("active");
-    document.getElementById(m.toLowerCase()).classList.add("active");
+function setVolt(v){
+    if(!synOn){
+        volt.innerText=(v/10).toFixed(1);
+        rotate(p2,v);
+    }
+}
+
+function mode(x){
+    m.innerText=x;
+    b2.classList.remove("active");
+    b4.classList.remove("active");
+    document.getElementById("b"+x[0]).classList.add("active");
+}
+
+function synergic(){
+    synOn=!synOn;
+    syn.classList.toggle("active");
+    s.innerText=synOn?"ON":"OFF";
 }
 </script>
 
