--- a/index.html
+++ b/index.html
@@ -161,5 +161,18 @@ function synergic(){
 }
 </script>
 
+<script>
+function saveState(){
+    localStorage.setItem("quickmig", JSON.stringify({
+        wire: parseFloat(wire.innerText),
+        volt: parseFloat(volt.innerText),
+        ind: parseInt(ind.innerText)
+    }));
+}
+
+// poziv nakon svake promjene
+setInterval(saveState, 500);
+</script>
+
 </body>
 </html>
