--- a/quickmig_tablet_hmi.html
+++ b/quickmig_tablet_hmi.html
@@ -7,116 +7,37 @@
 
 <style>
 *{box-sizing:border-box}
-body{
-    margin:0;
-    background:#0e0e0e;
-    color:#eee;
-    font-family:Arial,Helvetica,sans-serif;
-}
-
-.hmi{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    height:100vh;
-}
-
-/* LEFT – PARAMETERS */
-.panel{
-    padding:20px;
-    background:#151515;
-}
-
-.block{
-    background:#1f1f1f;
-    border-radius:16px;
-    padding:20px;
-    margin-bottom:20px;
-}
-
-.block h2{
-    margin:0 0 10px;
-    font-size:20px;
-}
-
-/* BIG DISPLAY */
-.display{
-    font-size:48px;
-    font-weight:bold;
-    background:#000;
-    padding:20px;
-    border-radius:12px;
-    text-align:center;
-    color:#ff3333;
-}
-
-/* SLIDERS */
-input[type=range]{
-    width:100%;
-    height:50px;
-    margin-top:10px;
-}
-
-/* BUTTONS */
-.btns{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:15px;
-}
-
-button{
-    height:70px;
-    font-size:20px;
-    border-radius:14px;
-    border:none;
-    background:#333;
-    color:white;
-}
-
-button.active{
-    background:#c40000;
-    box-shadow:0 0 15px #c40000;
-}
-
-button.alarm{
-    background:red;
-    animation:blink 1s infinite;
-}
-
-@keyframes blink{
-    50%{opacity:0.3}
-}
-
-/* RIGHT – LIVE FEEDBACK */
-.feedback{
-    background:#0b0b0b;
-    padding:20px;
-}
-
-canvas{
-    width:100%;
-    height:300px;
-    background:#222;
-    border-radius:16px;
-}
-
-.info{
-    font-size:20px;
-    margin-top:15px;
-}
-.warn{
-    color:#ff5555;
-    font-weight:bold;
-    font-size:22px;
-}
+body{margin:0;background:#0e0e0e;color:#eee;font-family:Arial}
+.hmi{display:grid;grid-template-columns:1fr 1fr;height:100vh}
+.panel{padding:20px;background:#151515}
+.block{background:#1f1f1f;border-radius:16px;padding:20px;margin-bottom:20px}
+.block h2{margin:0 0 10px;font-size:20px}
+.display{font-size:42px;font-weight:bold;background:#000;padding:20px;border-radius:12px;text-align:center;color:#ff3333}
+input[type=range]{width:100%;height:50px;margin-top:10px}
+.btns{display:grid;grid-template-columns:1fr 1fr;gap:15px}
+button{height:70px;font-size:20px;border-radius:14px;border:none;background:#333;color:white}
+button.active{background:#c40000;box-shadow:0 0 15px #c40000}
+button.alarm{background:red;animation:blink 1s infinite}
+@keyframes blink{50%{opacity:0.3}}
+.feedback{background:#0b0b0b;padding:20px}
+canvas{width:100%;height:300px;background:#222;border-radius:16px}
+.info{font-size:20px;margin-top:15px}
+.warn{color:#ff5555;font-weight:bold;font-size:22px}
 </style>
 </head>
 
 <body>
-
 <div class="hmi">
 
 <!-- LEFT -->
 <div class="panel">
+
+<div class="block">
+<h2>BRZINA ŽICE (m/min)</h2>
+<div class="display" id="wireD">6.5</div>
+<input type="range" min="2" max="15" step="0.1" value="6.5"
+oninput="setWire(this.value)">
+</div>
 
 <div class="block">
 <h2>STRUJA (A)</h2>
@@ -151,6 +72,7 @@ oninput="setInd(this.value)">
 <canvas id="c"></canvas>
 
 <div class="info">
+Žica: <b><span id="w">0</span> m/min</b><br>
 Struja: <b><span id="a">0</span>A</b><br>
 Napon: <b><span id="v">0</span>V</b><br>
 Induktivnost: <b><span id="i">0</span></b><br>
@@ -159,74 +81,85 @@ HAZ širina: <b><span id="h">0</span> mm</b><br>
 </div>
 
 </div>
-
 </div>
 
 <script>
-let amp=170,volt=18.5,ind=5,syn=true;
+let wire=6.5,amp=170,volt=18.5,ind=5,syn=true;
 const ctx=document.getElementById("c").getContext("2d");
 
 function save(){
-    localStorage.setItem("quickmig",JSON.stringify({
-        amp,volt,ind,syn
-    }));
+localStorage.setItem("quickmig",JSON.stringify({wire,amp,volt,ind,syn}));
+}
+
+function setWire(v){
+wire=parseFloat(v);
+wireD.innerText=wire.toFixed(1);
+if(syn){
+amp=Math.round(wire*25);
+volt=(14+wire*0.9).toFixed(1);
+ampD.innerText=amp;
+voltD.innerText=volt;
+}
+update();
 }
 
 function setAmp(v){
-    amp=parseInt(v);
-    ampD.innerText=amp;
-    if(syn){
-        volt=(14+amp/20).toFixed(1);
-        voltD.innerText=volt;
-    }
-    update();
+amp=parseInt(v);
+ampD.innerText=amp;
+if(syn){
+wire=(amp/25).toFixed(1);
+volt=(14+wire*0.9).toFixed(1);
+wireD.innerText=wire;
+voltD.innerText=volt;
+}
+update();
 }
 
 function setVolt(v){
-    if(!syn){
-        volt=parseFloat(v);
-        voltD.innerText=volt;
-        update();
-    }
+if(!syn){
+volt=parseFloat(v);
+voltD.innerText=volt;
+update();
+}
 }
 
 function setInd(v){
-    ind=parseInt(v);
-    update();
+ind=parseInt(v);
+update();
 }
 
 function toggleSyn(){
-    syn=!syn;
-    syn.classList.toggle("active");
-    update();
+syn=!syn;
+syn.classList.toggle("active");
+update();
 }
 
 function update(){
-    a.innerText=amp;
-    v.innerText=volt;
-    i.innerText=ind;
+w.innerText=wire;
+a.innerText=amp;
+v.innerText=volt;
+i.innerText=ind;
 
-    let heat=amp*volt*(1+ind/15);
-    let haz=(heat/80).toFixed(1);
-    h.innerText=haz;
+let heat=amp*volt*(1+ind/15)*(wire/6);
+let haz=(heat/90).toFixed(1);
+h.innerText=haz;
 
-    alarm.classList.toggle("alarm",heat>4200);
-    warn.innerText=haz>4?"⚠ OPASNOST OD KRIVLJENJA":"";
+alarm.classList.toggle("alarm",heat>4500);
+warn.innerText=haz>4?"⚠ PREVELIKA SJENA PROFILA":"";
 
-    drawHaz(haz);
-    save();
+drawHaz(haz);
+save();
 }
 
 function drawHaz(hz){
-    ctx.clearRect(0,0,600,300);
-    ctx.fillStyle="#555";
-    ctx.fillRect(100,150,400,20);
-    ctx.fillStyle="rgba(255,80,0,0.35)";
-    ctx.fillRect(100-hz*6,140,400+hz*12,40);
+ctx.clearRect(0,0,600,300);
+ctx.fillStyle="#555";
+ctx.fillRect(100,150,400,20);
+ctx.fillStyle="rgba(255,80,0,0.35)";
+ctx.fillRect(100-hz*6,140,400+hz*12,40);
 }
 
 update();
 </script>
-
 </body>
 </html>
